# ragharness

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: writing_adapters.md  writing_metrics.md
examples/: answer_quality_config.yaml  basic_config.yaml  custom_rag_system.py  haystack_config.yaml  haystack_python.py  hotpotqa_config.yaml  huggingface_config.yaml  langchain_config.yaml  langchain_runnable.py  llamaindex_config.yaml  llamaindex_python.py  programmatic_sweep.py  r2r_config.yaml  r2r_python.py  retrieval_quality_config.yaml  run_from_yaml.py  sample_dataset.jsonl
examples/sample_docs/: facts.txt
rag_eval_kit/: __init__.py  __main__.py  checkpoint.py  cli.py  config.py  cost_utils.py  dataset.py  orchestrator.py  tag_grouping.py
rag_eval_kit/adapters/: __init__.py  haystack.py  langchain.py  llamaindex.py  r2r.py  raw.py
rag_eval_kit/metrics/: __init__.py  answer.py  cost.py  exact_match.py  latency.py  llm_judge.py  retrieval.py
rag_eval_kit/reporters/: __init__.py  chart_reporter.py  compare_reporter.py  csv_reporter.py  html_reporter.py
ragbench/: __init__.py  __main__.py  checkpoint.py  cli.py  config.py  cost_utils.py  dataset.py  orchestrator.py  tag_grouping.py
ragbench/adapters/: __init__.py  haystack.py  langchain.py  llamaindex.py  r2r.py  raw.py
ragbench/metrics/: __init__.py  answer.py  cost.py  exact_match.py  latency.py  llm_judge.py  retrieval.py
ragbench/reporters/: __init__.py  chart_reporter.py  compare_reporter.py  csv_reporter.py  html_reporter.py
ragharness/: __init__.py  __main__.py  auth.py  checkpoint.py  cli.py  config.py  cost_utils.py  dataset.py  orchestrator.py  protocol.py
ragharness/adapters/: __init__.py  haystack.py  langchain.py  llamaindex.py  r2r.py  raw.py
ragharness/metrics/: __init__.py  cost.py  exact_match.py  latency.py  llm_judge.py  retrieval.py
ragharness/reporters/: __init__.py  chart_reporter.py  csv_reporter.py
tests/: conftest.py  test_auth.py  test_checkpoint.py  test_cli.py  test_compare.py  test_config.py  test_cost_utils.py  test_dataset.py  test_html_reporter.py  test_integration.py  test_orchestrator.py  test_orchestrator_parallel.py  test_protocol.py  test_reporters.py  test_smoke.py  test_tag_grouping.py
tests/test_adapters/: test_haystack.py  test_langchain.py  test_llamaindex.py  test_r2r.py  test_raw.py
tests/test_metrics/: test_answer.py  test_exact_match.py  test_latency_cost.py  test_llm_faithfulness.py  test_llm_judge.py  test_retrieval.py  test_retrieval_pack.py
