[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-eval-kit"
dynamic = ["version"]
description = "Pluggable RAG evaluation framework"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Dennis Koshta", email = "denniskoshta@gmail.com" }]
keywords = ["rag", "evaluation", "llm", "benchmark", "retrieval", "metrics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "tqdm>=4.60",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/DennisKoshta/rag-eval-kit"
Repository = "https://github.com/DennisKoshta/rag-eval-kit"
Issues = "https://github.com/DennisKoshta/rag-eval-kit/issues"
Changelog = "https://github.com/DennisKoshta/rag-eval-kit/blob/main/CHANGELOG.md"

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
openai = ["openai>=1.0"]
langchain = [
    "langchain>=0.2",
    "langchain-core>=0.2",
    "langchain-openai>=0.1",
    "langchain-anthropic>=0.1",
    "langchain-community>=0.2",
]
llamaindex = ["llama-index>=0.10"]
r2r = ["r2r>=3.0"]
haystack = ["haystack-ai>=2.0"]
huggingface = ["datasets>=2.14"]
cost = ["tiktoken>=0.7"]
all = ["rag-eval-kit[anthropic,openai,langchain,llamaindex,r2r,haystack,huggingface,cost]"]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
    "types-PyYAML",
    "types-tqdm",
]

[project.scripts]
rag-eval-kit = "rag_eval_kit.cli:main"

[tool.hatch.version]
path = "rag_eval_kit/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "rag_eval_kit/",
    "tests/",
    "examples/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["rag_eval_kit"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "openai",
    "anthropic",
    "langchain_core",
    "langchain_core.*",
    "langchain_openai",
    "langchain_anthropic",
    "llama_index.*",
    "r2r",
    "haystack",
    "haystack.*",
    "datasets",
    "tiktoken",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
